feat: add load image

--- a/index.html
+++ b/index.html
@@ -15,11 +15,15 @@
     </header>
 
     <main>
-          <!-- conteúdo da aula aqui -->
+          <button id="select-image">
+            <input type="file" id="photo-file">
+            Selecionar Imagem
+        </button>
+        <img src="" alt="" id="photo-preview">
     </main>
 
     <footer></footer>
     
-    <script src="scripts.js" type="module"></script>
+    <script src="script.js" type="module"></script>
 </body>
 </html>
