feat: add selection tool

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
             <input type="file" id="photo-file">
             Selecionar Imagem
         </button>
-        <img src="" alt="" id="photo-preview">
+        <img src="" alt="" id="photo-preview" draggable="false">
+        <div id="selection-tool"></div>
     </main>
 
     <footer></footer>
