--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             Selecionar Imagem
         </button>
         <img src="" alt="" id="photo-preview" draggable="false">
+        <button id="crop-image">Cortar Imagem</button>
         <div id="selection-tool"></div>
     </main>
 
