feat: download image

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         </button>
         <img src="" alt="" id="photo-preview" draggable="false">
         <button id="crop-image">Cortar Imagem</button>
+        <button id="download">Exportar Imagem</button>
         <div id="selection-tool"></div>
     </main>
 
